bitti sayılır